Manual: clean up some things related to the inclusion of the remotes. For button tables that use the 'Action' defines use HAVEREMOTEKEYMAP instead of the IRIVER_RC_H100_PAD so that the commands defined in the remote-keymap platform files will automatically be used. If a remote does not have all actions assigned, we can still define these commands but leave them empty. There will be some exceptions but this is still better than long opt lists. - Revert the changes to nim.tex (a Player only plugin) and splitedit.tex (bitmap Archos only) in the plugins section.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21666 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/main_menu/recording_screen.tex
+++ b/manual/main_menu/recording_screen.tex
@@ -31,36 +31,36 @@ The controls for this screen are:
   \begin{btnmap}{}{}
     
     \ActionRecPrev{} / \ActionRecNext 
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCRecPrev{} / \ActionRCRecNext}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCRecPrev{} / \ActionRCRecNext}
     & Select setting.\\
     %
     \ActionRecSettingsDec{} / \ActionRecSettingsInc
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCRecSettingsDec{} / \ActionRecSettingsInc}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCRecSettingsDec{} / \ActionRecSettingsInc}
     & Adjust selected setting.\\
     %
     \ActionRecPause 
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCRecPause}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCRecPause}
                     & Start recording.\\
-                    & \opt{IRIVER_RC_H100_PAD}{&}
+                    & \opt{HAVEREMOTEKEYMAP}{&}
                       While recording: pause recording (press again to
                       continue).\\
     %
     \ActionRecExit  
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCRecExit}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCRecExit}
                     & Exit \setting{Recording Screen}.\\
-                    & \opt{IRIVER_RC_H100_PAD}{&}
+                    & \opt{HAVEREMOTEKEYMAP}{&}
                       While recording: Stop recording.\\
     %
     \opt{IRIVER_H10_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,%
          SANSA_E200_PAD,IPOD_4G_PAD,SANSA_C200_PAD}{
       \ActionRecNewfile
-      \opt{IRIVER_RC_H100_PAD}{& \ActionRCRecNewfile} 
+      \opt{HAVEREMOTEKEYMAP}{& \ActionRCRecNewfile} 
                      & While recording: close the current file and open
                      a new one.\\
     }
     %
     \ActionRecMenu
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCRecMenu}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCRecMenu}
                        & Open \setting{Recording Settings} (see 
                        \reference{ref:Recordingsettings}).\\
     %
