--- a/manual/plugins/nim.tex
+++ b/manual/plugins/nim.tex
@@ -8,10 +8,10 @@ last match loses.  You can take up to twice as many matches as the
 
 \begin{table}
 \begin{btnmap}{}{}
-\ButtonLeft \opt{IRIVER_RC_H100_PAD}{&} & Decrease the number of matches \\
-\ButtonRight \opt{IRIVER_RC_H100_PAD}{&} & Increase the number of matches \\
-\ButtonPlay \opt{IRIVER_RC_H100_PAD}{&} & Remove the number of matches you have selected \\
-\ButtonStop \opt{IRIVER_RC_H100_PAD}{&} & Exit the game \\
+\ButtonLeft & Decrease the number of matches \\
+\ButtonRight & Increase the number of matches \\
+\ButtonPlay & Remove the number of matches you have selected \\
+\ButtonStop & Exit the game \\
 \end{btnmap}
 \end{table}
 
