--- a/manual/configure_rockbox/bookmarking.tex
+++ b/manual/configure_rockbox/bookmarking.tex
@@ -64,27 +64,27 @@
 \begin{table}
     \begin{btnmap}{}{}
       \ActionStdNext
-      \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdNext}
+      \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdNext}
       & Selects the next bookmark.\\
       %
       \ActionStdPrev
-      \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdPrev}
+      \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdPrev}
       & Selects the previous bookmark.\\
       %
       \ActionStdOk
-      \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdOk}
+      \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdOk}
       & Resumes from the selected bookmark.\\
       %
       \ActionStdCancel
-      \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdCancel}
+      \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdCancel}
       & Exits Recent Bookmark menu\\
       %
       \nopt{GIGABEAT_S_PAD}{\ActionBmDelete
-      \opt{IRIVER_RC_H100_PAD}{& \ActionRCBmDelete}
+      \opt{HAVEREMOTEKEYMAP}{& \ActionRCBmDelete}
       & Deletes the currently selected bookmark\\}
       %
       \ActionStdContext
-      \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdContext}
+      \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdContext}
       & Enters the context menu for the selected bookmark.\\
     \end{btnmap}
 \end{table}
