--- a/manual/main_menu/main.tex
+++ b/manual/main_menu/main.tex
@@ -19,24 +19,24 @@ safely (see \reference{ref:Safeshutdown}).
 \begin{table}
   \begin{btnmap}{}{}
     \ActionStdNext
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdNext}    
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdNext}    
     & Selects the next option in the menu.\\
     
-    & \opt{IRIVER_RC_H100_PAD}{&} Inside a setting,
+    & \opt{HAVEREMOTEKEYMAP}{&} Inside a setting,
       increases the value or chooses next option \\
     %
     \ActionStdPrev
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdPrev}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdPrev}
     & Selects the previous option in the menu.\\
-    & \opt{IRIVER_RC_H100_PAD}{&} Inside a setting,
+    & \opt{HAVEREMOTEKEYMAP}{&} Inside a setting,
       decreases the value or chooses previous option \\
     %
     \ActionStdOk
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdOk}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdOk}
     & Selects option \\
     %
     \ActionStdCancel
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdCancel}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdCancel}
     & Exits menu, setting or moves to parent menu\\
   \end{btnmap}
 \end{table}
@@ -51,27 +51,27 @@ jump straight to that track.
 \begin{table}
   \begin{btnmap}{}{}
     \ActionStdNext
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdNext}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdNext}
     & Selects the next bookmark.\\
     %
     \ActionStdPrev
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdPrev}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdPrev}
     & Selects the previous bookmark.\\
     %
     \ActionStdOk
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdOk}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdOk}
     & Resumes from the selected bookmark.\\
     %
     \ActionStdCancel
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdCancel}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdCancel}
     & Exits Recent Bookmark menu\\
     %
     \nopt{GIGABEAT_S_PAD}{\ActionBmDelete
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCBmDelete}
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCBmDelete}
     & Deletes the currently selected bookmark\\}
     %
     \ActionStdContext
-    \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdContext}  
+    \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdContext}  
     & Enters the context menu for the selected bookmark.\\
   \end{btnmap}
 \end{table}
