fix the manual for the statusbar changes
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21677 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/config_file_options.tex
+++ b/manual/appendix/config_file_options.tex
@@ -230,7 +230,10 @@
                                         & dB or \%\\
       peak meter max  & 0 to 89 /(dB) or 0 to 100 (\%)
                                         & dB or \%\\
-      statusbar     & on, off           & N/A\\
+      statusbar     & off, top, bottom  & N/A\\
+      \opt{remote}{
+        remote statusbar & off, top, bottom & N/A\\
+      }
       scrollbar     & on, off           & N/A\\
       volume display
                     & graphic, numeric  & N/A\\
