--- a/manual/configure_rockbox/display_options.tex
+++ b/manual/configure_rockbox/display_options.tex
@@ -197,7 +197,12 @@
       Settings related to on screen status display and the scrollbar.
       \begin{description}
       \item[Scroll Bar:] Enables or disables the scroll bar at the left.
-      \item[Status Bar:] Enables or disables the status bar at the upper side.
+      \item[Status Bar:] Allows you to choose where to display the 
+        statusbar\opt{remote}{ on the main display}. 
+      \opt{remote}{
+        \item[Remote Status Bar:] Allows you to choose where to display the 
+        statusbar on the remote display.
+      }
       \opt{RECORDER_PAD}{
        \item[Button Bar:] Enables or disables the button bar prompts for the
          ``F''-keys at the bottom of the screen.
