More cleanup and rearrangement for three column button tables in the manual. Most importantly: move the recently added IRIVER_RC_H100_PAD opt - including the additional column seperator - below everything that belongs to the first column. This way every column is grouped and it also allows to combine different remote control pads if they use the same button. Use HAVEREMOTEKAYMAP if the line refers to an ActionSomething. While at it, add or change some white space to make the tables more readable (there is still a lot to be desired there...) and remove a few tabs in random_folder_advance_config.tex. Also fix sliding.tex to make it show all buttons in an M5 manual by using the appropriate _PAD opt and not simply 'x5'. Finally, remove the one overlooked reference to the H100 remote pad in split_editor.tex.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21696 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/mpegplayer.tex
+++ b/manual/plugins/mpegplayer.tex
@@ -15,22 +15,24 @@ option and choose \setting{mpegplayer}.
     \nopt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ActionWpsPlay}
       \opt{IRIVER_RC_H100_PAD}{&} 
     & Pause / Resume\\
-    \ActionWpsStop \opt{IRIVER_RC_H100_PAD}{&} & Stop\\
+    \ActionWpsStop
+      \opt{HAVEREMOTEKEYPAD}{&}
+    & Stop\\
     \nopt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ActionWpsVolUp{} / \ActionWpsVolDown}
-      \opt{IRIVER_RC_H100_PAD}{&} 
-    \opt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ButtonLeft{} or  \ButtonVolDown{} / 
+    \opt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ButtonLeft{} or  \ButtonVolDown{} /
+      \opt{HAVEREMOTEKEYPAD}{&}
         \ButtonRight{} or \ButtonVolUp}
     & Adjust volume up / down\\
     \nopt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ActionWpsSkipPrev{} / \ActionWpsSkipNext}
-      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ButtonUp{} / \ButtonDown}
-    & Rewind / Fast Forward\\ 
+      \opt{HAVEREMOTEKEYPAD}{&}
+    & Rewind / Fast Forward\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
-      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
+      \opt{IRIVER_RC_H100_PAD}{&}
     & Open the MPEG Player menu\\
 \end{btnmap}
 \end{table}
