--- a/manual/plugins/split_editor.tex
+++ b/manual/plugins/split_editor.tex
@@ -114,7 +114,7 @@ The whole process of splitting an mp3 file consists of three steps:
 
   \begin{table}
     \begin{btnmap}{Controls in the split editor}{}
-      \ButtonOff \opt{IRIVER_RC_H100_PAD}{&} & Quit plugin \\
+      \ButtonOff & Quit plugin \\
       %
       \ButtonLeft\ / \ButtonRight &  Move the split point indicator \\
       %
