--- a/manual/plugins/disktidy.tex
+++ b/manual/plugins/disktidy.tex
@@ -22,7 +22,8 @@
   
   \begin{table}
     \begin{btnmap}{}{}
-      \ActionStdCancel      \opt{IRIVER_RC_H100_PAD}{&} 
+      \ActionStdCancel
+        \opt{HAVEREMOTEPAD}{&}
       & Exit / Abort\\
     \end{btnmap}
 \end{table}
