--- a/manual/plugins/sliding.tex
+++ b/manual/plugins/sliding.tex
@@ -8,43 +8,44 @@ Key controls:
 
 \begin{table}
   \begin{btnmap}{}{}
-  \opt{RECORDER_PAD,ONDIO_PAD,h100,h300,x5,SANSA_E200_PAD,SANSA_C200_PAD%
-       ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+  \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
+      ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
     {\ButtonLeft, \ButtonRight, \ButtonUp\ and \ButtonDown}
-    \opt{IRIVER_RC_H100_PAD}{&} 
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}
     {\ButtonLeft{} / \ButtonRight{} / \ButtonMenu{} / \ButtonPlay}
   \opt{IRIVER_H10_PAD}
     {\ButtonLeft{} / \ButtonRight{} / \ButtonScrollUp{} / \ButtonScrollDown}
+  \opt{IRIVER_RC_H100_PAD}{&}
   & Move Tile \\
   %
   \opt{RECORDER_PAD}{\ButtonFOne}
   \opt{ONDIO_PAD}{Long \ButtonMenu}
-  \opt{h100,h300,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect} 
-    \opt{IRIVER_RC_H100_PAD}{&} 
-  \opt{x5,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
+  \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+      {\ButtonSelect}
+  \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonLeft}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
+    \opt{IRIVER_RC_H100_PAD}{&}
   & Shuffle \\
   %
   \opt{RECORDER_PAD}{\ButtonFTwo}
   \opt{ONDIO_PAD}{\ButtonMenu}
-  \opt{h100,h300}{\ButtonOn}
-    \opt{IRIVER_RC_H100_PAD}{&} 
-  \opt{x5,IRIVER_H10_PAD}{\ButtonPlay}
+  \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+  \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonRight}
   \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
   \opt{GIGABEAT_PAD}{\ButtonA}
   \opt{MROBE100_PAD}{\ButtonDisplay}
   \opt{GIGABEAT_S_PAD}{\ButtonMenu}
+    \opt{IRIVER_RC_H100_PAD}{&}
   & Change between picture and numbered tiles \\
   %
   \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
-    \opt{IRIVER_RC_H100_PAD}{&} 
-  \opt{x5,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}
-    {\ButtonPower}
+  \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
+      ,MROBE100_PAD}{\ButtonPower}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
   \opt{GIGABEAT_S_PAD}{\ButtonBack}
+    \opt{IRIVER_RC_H100_PAD}{&}
   & Stop the game \\
   \end{btnmap}
 \end{table}
