--- a/manual/plugins/sokoban.tex
+++ b/manual/plugins/sokoban.tex
@@ -24,67 +24,67 @@ information about the level format, see
        \opt{IRIVER_RC_H100_PAD}{&}
     & Move the ``sokoban'' up, down, left, or right\\
 \opt{RECORDER_PAD,ARCHOS_AV300_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
-    \opt{IRIVER_RC_H100_PAD}{&} 
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
 \opt{GIGABEAT_S_PAD}{\ButtonMenu}
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Menu \\
 \nopt{IAUDIO_X5_PAD}{
     \opt{RECORDER_PAD,ARCHOS_AV300_PAD}{\ButtonFOne}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonLeft}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn+\ButtonDown}
-    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonLeft}
     \opt{IRIVER_H10_PAD}{\ButtonPlay+\ButtonScrollDown}
     \opt{GIGABEAT_PAD,SANSA_C200_PAD}{\ButtonVolDown}
     \opt{MROBE10_PAD}{\ButtonDisplay}
     \opt{SANSA_E200_PAD}{\ButtonSelect+\ButtonDown}
     \opt{GIGABEAT_S_PAD}{\ButtonPrev}
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Back to previous level \\
 }
 \nopt{IPOD_4G_PAD,IPOD_3G_PAD}{
     \opt{RECORDER_PAD,ARCHOS_AV300_PAD}{\ButtonFTwo}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonUp}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
-    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonPlay+\ButtonRight}
     \opt{GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect+\ButtonRight}
     \opt{GIGABEAT_S_PAD}{\ButtonPlay}
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Restart level \\
 }
 \nopt{IAUDIO_X5_PAD}{
     \opt{RECORDER_PAD,ARCHOS_AV300_PAD}{\ButtonFThree}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonRight}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn+\ButtonUp}
-    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonRight}
     \opt{IRIVER_H10_PAD}{\ButtonPlay+\ButtonScrollUp}
     \opt{GIGABEAT_PAD,SANSA_C200_PAD}{\ButtonVolUp}
     \opt{GIGABEAT_S_PAD}{\ButtonNext}
     \opt{MROBE100_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD}{\ButtonSelect+\ButtonUp}
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Go to next level \\
 }
 \opt{RECORDER_PAD,ARCHOS_AV300_PAD}{\ButtonOn}
 \opt{ONDIO_PAD}{\ButtonMenu}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonRec}
-    \opt{IRIVER_RC_H100_PAD}{&} 
 \opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
 \opt{IRIVER_H10_PAD}{\ButtonRew}
 \opt{GIGABEAT_S_PAD}{\ButtonVolUp}
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Undo last movement \\
 \opt{RECORDER_PAD,ARCHOS_AV300_PAD,IAUDIO_X5_PAD}{\ButtonPlay}
 \opt{ONDIO_PAD}{\ButtonMenu+\ButtonDown}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
-    \opt{IRIVER_RC_H100_PAD}{&} 
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
 \opt{IRIVER_H10_PAD}{\ButtonFF}
 \opt{GIGABEAT_PAD}{\ButtonA}
 \opt{GIGABEAT_S_PAD}{\ButtonVolDown}
 \opt{MROBE100_PAD}{\ButtonDisplay}
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Redo previously undone move \\
 \hline
 \multicolumn{2}{c}{\textbf{Solution playback}} \\
@@ -92,24 +92,25 @@ information about the level format, see
 \opt{RECORDER_PAD,ARCHOS_AV300_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
 \opt{ONDIO_PAD}{\ButtonMenu}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
-    \opt{IRIVER_RC_H100_PAD}{&} 
 \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD%
       ,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Pause/resume \\
 \opt{RECORDER_PAD,ARCHOS_AV300_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD%
     ,IAUDIO_X5_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_C200_PAD}
     {\ButtonUp/\ButtonDown}
-    \opt{IRIVER_RC_H100_PAD}{&} 
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu/\ButtonPlay}
 \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown}
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Increase/decrease playback speed \\
-    \ButtonLeft/\ButtonRight     \opt{IRIVER_RC_H100_PAD}{&} 
+    \ButtonLeft/\ButtonRight
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Go backward/forward (while paused) \\
 \opt{RECORDER_PAD,ARCHOS_AV300_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
-    \opt{IRIVER_RC_H100_PAD}{&}%
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
 \opt{GIGABEAT_S_PAD}{\ButtonMenu}
+    \opt{IRIVER_RC_H100_PAD}{&}%
     & Quit \\
 \end{btnmap}
 \end{table}
