--- a/manual/plugins/text_editor.tex
+++ b/manual/plugins/text_editor.tex
@@ -20,10 +20,10 @@ the \setting{Virtual Keyboard} (see \reference{sec:virtual_keyboard}).
 
 \begin{table}
     \begin{btnmap}{}{}
-    \ActionStdOk \opt{IRIVER_RC_H100_PAD}{&} & Edit Line / Select Character\\
-    \ActionStdCancel \opt{IRIVER_RC_H100_PAD}{&} & Exit / Abort Editing\\
-    \ActionStdMenu \opt{IRIVER_RC_H100_PAD}{&} & Show Item Menu\\
-    \ActionStdContext \opt{IRIVER_RC_H100_PAD}{&} & Delete Line\\
+    \ActionStdOk \opt{HAVEREMOTEKEYPAD}{&} & Edit Line / Select Character\\
+    \ActionStdCancel \opt{HAVEREMOTEKEYPAD}{&} & Exit / Abort Editing\\
+    \ActionStdMenu \opt{HAVEREMOTEKEYPAD}{&} & Show Item Menu\\
+    \ActionStdContext \opt{HAVEREMOTEKEYPAD}{&} & Delete Line\\
     \end{btnmap}
 \end{table}
 
