new game plugin for colored players named clix (by Rene Peinthor)
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21720 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -27,6 +27,8 @@ text files%
 
 \opt{lcd_bitmap}{\input{plugins/chessbox.tex}}
 
+\opt{lcd_bitmap}{\input{plugins/clix.tex}}
+
 \opt{lcd_bitmap}{\input{plugins/chopper.tex}}
 
 {\input{plugins/dice.tex}}
