Jackpot is now available on all targets, so enable it for all manuals as well. The button table needs to be filled out still though. Also move the opt for the H100 remote again (see r21696).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21729 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/jackpot.tex
+++ b/manual/plugins/jackpot.tex
@@ -4,11 +4,15 @@
 This is a jackpot slot machine game. At the beginning of the game you
 have 20\$.  Payouts are given when three matching symbols come up.
 
+% fill out for every other target...
 \begin{table}
 \begin{btnmap}{}{}
-\ButtonPlay      \opt{IRIVER_RC_H100_PAD}{&}    & Play \\
-\ButtonStop      \opt{IRIVER_RC_H100_PAD}{&}    & Exit the game \\
+    \opt{PLAYER_PAD}{\ButtonPlay}
+          \opt{IRIVER_RC_H100_PAD}{&}
+    & Play \\
+    \opt{PLAYER_PAD}{\ButtonStop}
+          \opt{IRIVER_RC_H100_PAD}{&}
+    & Exit the game \\
 \end{btnmap}
 \end{table}
-
 
