--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -42,7 +42,7 @@ text files%
 \opt{lcd_non-mono}{\nopt{h10_5gb,ipodmini,c200}{
   \input{plugins/invadrox.tex}}}
 
-\opt{player}{\input{plugins/jackpot.tex}}
+{\input{plugins/jackpot.tex}}
 
 \opt{lcd_bitmap}{\input{plugins/jewels.tex}}
 
