Use the correct (feature) option to only include the new clix.tex in manuals of targets with colour screens.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21730 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -27,7 +27,7 @@ text files%
 
 \opt{lcd_bitmap}{\input{plugins/chessbox.tex}}
 
-\opt{lcd_bitmap}{\input{plugins/clix.tex}}
+\opt{lcd_color}{\input{plugins/clix.tex}}
 
 \opt{lcd_bitmap}{\input{plugins/chopper.tex}}
 
