--- a/manual/plugins/mazezam.tex
+++ b/manual/plugins/mazezam.tex
@@ -14,9 +14,9 @@ Luckily, there are checkpoints at levels four and eight.
 
 \begin{table}
 \begin{btnmap}{}{}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu, \ButtonPlay,}
-    \opt{SANSA_E200_PAD}{\ButtonScrollFwd, \ButtonScrollBack,}
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_C200_PAD,RECORDER_PAD%
+    \opt{IPOD_4G_PAD}{\ButtonMenu, \ButtonPlay,}
+    \opt{IPOD_3G_PAD}{\ButtonScrollBack, \ButtonScrollFwd,}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_C200_PAD,SANSA_E200_PAD,SANSA_FUZE_PAD,RECORDER_PAD%
         ,ONDIO_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonUp, \ButtonDown,}%
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp, \ButtonScrollDown,}
@@ -24,8 +24,9 @@ Luckily, there are checkpoints at levels four and eight.
       \opt{IRIVER_RC_H100_PAD}{&} 
     & Move Character\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,RECORDER_PAD,ONDIO_PAD}{\ButtonOff}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
-    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{IPOD_4G_PAD}{\ButtonSelect+\ButtonMenu}
+    \opt{IPOD_3G_PAD}{\ButtonMenu}
+    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,SANSA_FUZE_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
       \opt{IRIVER_RC_H100_PAD}{&}
     & Menu\\
