Add some Makefile rules to demonstrate assembling, linking, converting to binary file and finally converting to a notes .htm file.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21845 a1c6a512-1295-4272-9138-f99709370657

--- a/utils/ipod/bin2note/README
+++ b/utils/ipod/bin2note/README
@@ -10,3 +10,8 @@ It is used to turn a blob of ARM code into an iPod notes file.  This
 ARM code will then be executed on the iPod.
 
 It is known to work on the 2nd generation Nano.
+
+
+The Makefile contains rules for compiling an ARM assembler file
+"test.S" into a notes file "test.htm".  Just put test.S in this
+directory and type "make test.htm".
