--- a/manual/plugins/jewels.tex
+++ b/manual/plugins/jewels.tex
@@ -10,13 +10,16 @@ before running out of available moves. Higher points are
 awarded to larger combos. The game advances to the next level
 after every one hundred points and randomly clears several jewels.
 
+In the mode puzzle the aim of the game is to connect the puzzles, by skilful swapping pairs of jewels.
+
 \begin{table}
   \begin{btnmap}{}{}
     \ButtonLeft/\ButtonRight/\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD%
       ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,GIGABEAT_S_PAD}
       {\ButtonUp/\ButtonDown}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu/\ButtonPlay}
+    \opt{IPOD_4G_PAD}{\ButtonMenu/\ButtonPlay}
+    \opt{IPOD_3G_PAD}{\ButtonScrollBack/\ButtonScrollFwd}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown}
       \opt{IRIVER_RC_H100_PAD}{&}
     & Move the cursor around the jewels \\
@@ -27,24 +30,13 @@ after every one hundred points and randomly clears several jewels.
       {\ButtonSelect}
       \opt{IRIVER_RC_H100_PAD}{&}
     & Select a jewel \\
-    \opt{RECORDER_PAD,IRIVER_H10_PAD}{Long \ButtonPlay}%
-    \opt{ONDIO_PAD}{Long \ButtonMenu}%
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode{} or Long \ButtonSelect}
-    \opt{GIGABEAT_S_PAD}{\ButtonMenu{} or Long \ButtonSelect}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
-      ,MROBE100_PAD,IAUDIO_X5_PAD}{Long \ButtonSelect}%
-      \opt{IRIVER_RC_H100_PAD}{&}
-    & Show the in-game menu \\
-    \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}
-      {\ButtonOff
-          \opt{IRIVER_RC_H100_PAD}{&}
-           & Exit \\}%
     \opt{IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD%
-      ,IAUDIO_X5_PAD}{\ButtonPower & Exit \\}%
-    \opt{GIGABEAT_S_PAD}{\ButtonBack & Exit \\}%
-
+      ,IAUDIO_X5_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
+    \opt{IPOD_3G_PAD}{\ButtonMenu}
+    \opt{IPOD_4G_PAD}{\ButtonSelect+ \ButtonMenu}
+    \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+      \opt{IRIVER_RC_H100_PAD}{&}
+     & Menu \\
   \end{btnmap}
 \end{table}
-
-\opt{IPOD_4G_PAD,IPOD_3G_PAD}
-  {To exit the game, bring up the in-game menu and select \setting{Exit Jewels}.}
